[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/BuildingPlatform.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/World.gd" type="Script" id=2]
[ext_resource path="res://Assets/towerbutton_pressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/towerButton.png" type="Texture" id=4]
[ext_resource path="res://Assets/towerButton_hover.png" type="Texture" id=5]
[ext_resource path="res://Assets/vej.png" type="Texture" id=6]
[ext_resource path="res://Assets/PlaymegamesReguler-2OOee.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Assets/towerButton1.png" type="Texture" id=11]
[ext_resource path="res://Assets/towerbutton_pressed1.png" type="Texture" id=12]
[ext_resource path="res://Assets/towerButton_hover1.png" type="Texture" id=13]

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 43.0833, 0, 0, 0, 0, 112.424, 43.0833, 0, 0, 0, 0, 112.424, 114, 0, 0, 0, 0, 256.97, 114 )
}

[sub_resource type="DynamicFont" id=3]
size = 200
font_data = ExtResource( 10 )

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="Vej" type="Sprite" parent="."]
position = Vector2( 127.875, 75.5 )
scale = Vector2( 0.133464, 0.137963 )
texture = ExtResource( 6 )

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( 0, -1.91891 )
scale = Vector2( 0.996226, 0.972973 )
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 256.97, 114 )
offset = 499.47

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="GUI" type="CanvasLayer" parent="."]

[node name="CashLabel" type="Label" parent="GUI"]
anchor_left = -0.00219232
anchor_top = 0.00374156
anchor_right = -0.00219226
anchor_bottom = 0.00374156
margin_left = 158.561
margin_top = 131.439
margin_right = 1111.56
margin_bottom = 300.439
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = SubResource( 3 )
text = "Cash: 10"
align = 2

[node name="TextureButton" type="TextureButton" parent="GUI"]
margin_left = 220.0
margin_top = 3.0
margin_right = 252.0
margin_bottom = 40.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true

[node name="TextureButton1" type="TextureButton" parent="GUI"]
visible = false
margin_left = 173.0
margin_top = 97.0
margin_right = 205.0
margin_bottom = 134.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )
expand = true

[node name="pricelabel1" type="Label" parent="GUI"]
margin_left = 228.0
margin_top = 35.0
margin_right = 244.0
margin_bottom = 49.0
text = "25"

[node name="pricelabel2" type="Label" parent="GUI"]
visible = false
margin_left = 182.0
margin_top = 136.0
margin_right = 198.0
margin_bottom = 150.0
text = "50"

[node name="BuildingPlatform6" parent="." instance=ExtResource( 1 )]
position = Vector2( 79, 111 )

[node name="BuildingPlatform" parent="." instance=ExtResource( 1 )]
position = Vector2( 198, 74 )

[node name="BuildingPlatform2" parent="." instance=ExtResource( 1 )]
position = Vector2( 149, 34 )

[node name="BuildingPlatform3" parent="." instance=ExtResource( 1 )]
position = Vector2( 148, 73 )

[node name="BuildingPlatform4" parent="." instance=ExtResource( 1 )]
position = Vector2( 32, 76 )

[node name="BuildingPlatform5" parent="." instance=ExtResource( 1 )]
position = Vector2( 79, 76 )

[node name="BuildingPlatform7" parent="." instance=ExtResource( 1 )]
position = Vector2( 43, 15 )

[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="pressed" from="GUI/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="GUI/TextureButton1" to="." method="_on_TextureButton1_pressed"]
